--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "martezine-web",
   "version": "1.0.0",
+  "private": "true",
   "description": "Site da Revista Marte",
   "main": "index.js",
   "scripts": {
@@ -17,8 +18,5 @@
   "bugs": {
     "url": "https://github.com/revistamarte/martezine-web/issues"
   },
-  "homepage": "https://github.com/revistamarte/martezine-web#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "homepage": "https://github.com/revistamarte/martezine-web#readme"
 }
