--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "start": "npm run build:client && cd ./server/ && npm start",
     "dev": "concurrently --kill-others \"npm run client\" \"npm run server\"",
-    "client": "cd ./client/ & npm run dev",
-    "build:client": "cd ./client/ & npm run build",
-    "server": "cd ./server/ & npm run dev",
+    "client": "cd ./client/ && npm run dev",
+    "build:client": "cd ./client/ && npm run build",
+    "server": "cd ./server/ && npm run dev",
     "postinstall": "cd client && npm i && cd ../server && npm i"
   },
   "repository": {
