--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "revista marte",
-  "name": "Create React App Sample",
+  "name": "revista marte",
   "icons": [
     {
       "src": "favicon.ico",
