--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.4"
