--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.4"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
