--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "googleapis": "^118.0.0",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
+    "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
